--- a/app/views/sheets/index.html.erb
+++ b/app/views/sheets/index.html.erb
@@ -1,6 +1,11 @@
 <h1>Sheets#index</h1>
 <p>Find me in app/views/sheets/index.html.erb</p>
 
+<%= form_with(url: new_sheet_path, method: :get) do |form| %>
+  <%= form.select :level, options_for_select(@level, selected: Sheet::DEFAULT_LEVEL), {}, { class: 'form-control' } %>
+  <%= form.submit '曲を作成する', class: 'btn btn-primary' %>
+<% end %>
+
 <div id="sheets">
   <% @sheets.each do |sheet| %>
     <p>
