--- a/app/views/sheets/show.html.erb
+++ b/app/views/sheets/show.html.erb
@@ -17,6 +17,10 @@
       <% end %>
       <% msg = t('defaults.message.delete_confirm') %>
       <%= button_to t('defaults.delete'), sheet_path(@sheet), method: :delete, class: "btn btn-danger", form: { onSubmit: "return check('#{msg}')" } %>
+      <h1><%= t('defaults.audition') %></h1>
+      <button id="play-btn" type="button" class="btn btn-success btn-lg"><%= t('defaults.play') %></button>
+      <button id="stop-btn" type="button" class="btn btn-success"><%= t('defaults.stop') %></button>
+      <input type="hidden" id="sheet" value="<%= @sheet.comma_joined_mml %>">
     </div>
     <div class="col-md-9">
       <h1>譜面データ（仮）</h1>
