--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,5 +1,5 @@
 <header>
-  <nav class='navbar navbar-expand-lg navigation navbar-light bg-light'>
+  <nav class='navbar navbar-expand-lg navigation navbar-light bg-white'>
     <%= link_to root_path, class: 'navbar-brand' do %>
       <%= image_tag 'logo.png' %>
     <% end %>
@@ -10,7 +10,7 @@
           <%= form.select :level, options_for_select(@level, selected: Sheet::DEFAULT_LEVEL), {}, { class: 'form-control' } %>
         </div>
         <div class="col-sm-3">
-          <%= form.submit '曲を作成する', class: 'btn btn-primary' %>
+          <%= form.submit t('defaults.make_music'), class: 'btn btn-primary btn-lg' %>
         </div>
       </div>
     <% end %>
