--- a/app/views/sheets/new.html.erb
+++ b/app/views/sheets/new.html.erb
@@ -2,14 +2,16 @@
   <div class="row">
     <div class="col-md-12">
       <%= render @sheet %>
-      <%= form_with model: @sheet, local: true do |f| %>
-        <div class="form-group">
-          <%= f.label :title %>
-          <%= f.text_field :title, class: 'form-control' %>
-        </div>
-        <%= f.hidden_field :level, value: @sheet.level %>
-        <%= f.hidden_field :comma_joined_mml, value: @sheet.comma_joined_mml %>
-        <%= f.submit class: 'btn btn-outline-primary' %>
+      <% if logged_in? %>
+        <%= form_with model: @sheet, local: true do |f| %>
+          <div class="form-group">
+            <%= f.label :title %>
+            <%= f.text_field :title, class: 'form-control' %>
+          </div>
+          <%= f.hidden_field :level, value: @sheet.level %>
+          <%= f.hidden_field :comma_joined_mml, value: @sheet.comma_joined_mml %>
+          <%= f.submit class: 'btn btn-outline-primary' %>
+        <% end %>
       <% end %>
     </div>
   </div>
