--- a/app/views/sheets/show.html.erb
+++ b/app/views/sheets/show.html.erb
@@ -2,15 +2,18 @@
   <div class="row">
     <div class="col-md-12">
       <%= render @sheet %>
-      <%= form_with model: @sheet, local: true do |f| %>
-        <div class="form-group">
-          <%= f.label :title %>
-          <%= f.text_field :title, class: 'form-control' %>
-        </div>
-        <%= f.submit class: 'btn btn-outline-primary' %>
+      <h5>投稿者：<%= @sheet.user.name %></h5>
+      <% if logged_in? && current_user.own?(@sheet) %>
+        <%= form_with model: @sheet, local: true do |f| %>
+          <div class="form-group">
+            <%= f.label :title %>
+            <%= f.text_field :title, class: 'form-control' %>
+          </div>
+          <%= f.submit class: 'btn btn-outline-primary' %>
+        <% end %>
+        <% msg = t('defaults.message.delete_confirm') %>
+        <%= button_to t('defaults.delete'), sheet_path(@sheet), method: :delete, class: "btn btn-outline-danger btn-sm", form: { onSubmit: "return check('#{msg}')" } %>
       <% end %>
-      <% msg = t('defaults.message.delete_confirm') %>
-      <%= button_to t('defaults.delete'), sheet_path(@sheet), method: :delete, class: "btn btn-outline-danger btn-sm", form: { onSubmit: "return check('#{msg}')" } %>
     </div>
   </div>
 </div>
