--- a/app/views/sheets/_sheet.html.erb
+++ b/app/views/sheets/_sheet.html.erb
@@ -4,7 +4,7 @@
 <input type="hidden" id="sheet" value="<%= sheet.comma_joined_mml %>">
 
 <div id="note">
-  <table class="table table-bordered">
+  <table class="table table-bordered text-nowrap">
     <thead>
       <tr class="table-info">
         <th style="width: 12.5%" scope="col" colspan="2">1</th>
