Fix: 練習曲作成処理の見直し

--- a/app/views/sheets/_sheet.html.erb
+++ b/app/views/sheets/_sheet.html.erb
@@ -42,3 +42,6 @@
     </tbody>
   </table>
 </div>
+
+<label for="tempo" class="form-label"><%= t('defaults.tempo') %></label>
+<input type="range" class="form-range" min="20" max="200" value="80" id="tempo">
