--- a/app/views/shared/_common.html.erb
+++ b/app/views/shared/_common.html.erb
@@ -7,7 +7,8 @@
           <%= form.submit t('defaults.make_music'), class: 'btn btn-primary btn-lg' %>
         </li>
         <li class="nav-item">
-          <%= form.select :level, options_for_select(@level, selected: Sheet::DEFAULT_LEVEL), {}, { class: 'form-control' } %>
+          <% level = @sheet ? @sheet.level : Sheet::DEFAULT_LEVEL %>
+          <%= form.select :level, options_for_select(@level, selected: level), {}, { class: 'form-control' } %>
         </li>
       <% end %>
     </ul>
