--- a/app/views/shared/_common.html.erb
+++ b/app/views/shared/_common.html.erb
@@ -8,7 +8,7 @@
         </li>
         <li class="nav-item">
           <% level = @sheet ? @sheet.level : Sheet::DEFAULT_LEVEL %>
-          <%= form.select :level, options_for_select(@level, selected: level), {}, { class: 'form-control' } %>
+          <%= form.select :level, options_for_select(Sheet.types_of_selectable_levels, selected: level), {}, { class: 'form-control' } %>
         </li>
       <% end %>
     </ul>
