--- a/app/views/sheets/index.html.erb
+++ b/app/views/sheets/index.html.erb
@@ -27,7 +27,9 @@
       <thead class="table-light">
         <tr>
           <th scope="col"><%= t('.etude_list') %></th>
-          <th scope="col"><%= t('.user_name') %></th>
+          <th scope="col"><%= Sheet.human_attribute_name(:level) %></th>
+          <th scope="col"><%= User.human_attribute_name(:name) %></th>
+          <th scope="col"><%= Sheet.human_attribute_name(:created_at) %></th>
         </tr>
       </thead>
 
@@ -35,7 +37,9 @@
         <% @sheets.each do |sheet| %>
           <tr>
             <td><%= link_to sheet.title, sheet %></td>
+            <td><%= sheet.level %></td>
             <td><%= sheet.user.name %></td>
+            <td><%= sheet.created_at.strftime('%Y/%m/%d') %></td>
           </tr>
         <% end %>
       </tbody>
