--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
 
     <%= stylesheet_link_tag "application" %>
     <%= javascript_importmap_tags %>
+    <%= display_meta_tags(default_meta_tags) %>
   </head>
 
   <body>
