Fix: 登録曲の一覧表示を登録の新しい順に変更

--- a/app/views/sheets/index.html.erb
+++ b/app/views/sheets/index.html.erb
@@ -45,7 +45,7 @@
     </thead>
 
     <tbody>
-      <% @sheets.each do |sheet| %>
+      <% @sheets.reverse_each do |sheet| %>
         <tr>
           <td><%= link_to sheet.title, sheet %></td>
           <td><%= sheet.level %></td>
