--- a/app/views/sheets/show.html.erb
+++ b/app/views/sheets/show.html.erb
@@ -1,6 +1,34 @@
 <div class="container">
   <%= render @sheet %>
   <p class="fst-italic text-end"><%= @sheet.created_at.strftime('%Y/%m/%d') %> : <%= @sheet.user.name %></p>
+
+  <% @comments.each do |comment| %>
+    <div class="card border-success mb-3">
+      <div class="card-header"><%= comment.user.name %></div>
+      <div class="card-body">
+        <p class="card-text"><%= comment.body %></p>
+        <p class="card-text"><%= comment.created_at.strftime('%Y/%m/%d') %></p>
+
+        <% if logged_in? && current_user.own?(comment) %>
+          <% msg = t('defaults.message.delete_confirm') %>
+          <%= button_to '', comment_path(comment), method: :delete, class: "btn btn btn-outline-primary btn-sm bi bi-trash", form: { onSubmit: "return check('#{msg}')" } %>
+        <% end %>
+      </div>
+    </div>
+  <% end %>
+
+  <% if logged_in? %>
+    <div class="row mb-3">
+      <div class="col-lg-8 offset-lg-2">
+        <%= form_with model: @comment, url: [@sheet, @comment], local: true do |f| %>
+          <%= f.label :body %>
+          <%= f.text_area :body, class: 'form-control mb-3', id: 'js-new-comment-body', row: 4, placeholder: Comment.human_attribute_name(:body) %>
+          <%= f.submit t('defaults.post'), class: 'btn btn-primary' %>
+        <% end %>
+      </div>
+    </div>
+  <% end %>
+
   <% if logged_in? && current_user.own?(@sheet) %>
     <%= form_with model: @sheet, local: true do |f| %>
       <div class="form-group">
