--- a/app/views/sheets/show.html.erb
+++ b/app/views/sheets/show.html.erb
@@ -6,12 +6,19 @@
     <div class="card border-success mb-3">
       <div class="card-header"><%= comment.user.name %></div>
       <div class="card-body">
-        <p class="card-text"><%= comment.body %></p>
+        <p class="card-text"><%= simple_format(comment.body) %></p>
         <p class="card-text"><%= comment.created_at.strftime('%Y/%m/%d') %></p>
 
         <% if logged_in? && current_user.own?(comment) %>
-          <% msg = t('defaults.message.delete_confirm') %>
-          <%= button_to '', comment_path(comment), method: :delete, class: "btn btn btn-outline-primary btn-sm bi bi-trash", form: { onSubmit: "return check('#{msg}')" } %>
+          <div class="d-flex">
+            <div>
+              <%= button_to '', edit_comment_path(comment), method: :get, class: "btn btn btn-outline-primary btn-sm bi bi-pencil" %>
+            </div>
+            <div>
+              <% msg = t('defaults.message.delete_confirm') %>
+              <%= button_to '', comment_path(comment), method: :delete, class: "btn btn btn-outline-primary btn-sm bi bi-trash", form: { onSubmit: "return check('#{msg}')" } %>
+            </div>
+          </div>
         <% end %>
       </div>
     </div>
