--- a/app/views/sheets/index.html.erb
+++ b/app/views/sheets/index.html.erb
@@ -39,6 +39,7 @@
       <tr>
         <th scope="col"><%= t('.etude_list') %></th>
         <th scope="col"><%= Sheet.human_attribute_name(:level) %></th>
+        <th scope="col"><%= t('defaults.comment_count') %></th>
         <th scope="col"><%= User.human_attribute_name(:name) %></th>
         <th scope="col"><%= Sheet.human_attribute_name(:created_at) %></th>
       </tr>
@@ -49,6 +50,7 @@
         <tr>
           <td><%= link_to sheet.title, sheet %></td>
           <td><%= sheet.level %></td>
+          <td><%= sheet.comments.count %></td>
           <td><%= sheet.user.name %></td>
           <td><%= sheet.created_at.strftime('%Y/%m/%d') %></td>
         </tr>
