--- a/app/views/sheets/show.html.erb
+++ b/app/views/sheets/show.html.erb
@@ -7,6 +7,11 @@
       <div class="card-header"><%= comment.user.name %></div>
       <div class="card-body">
         <p class="card-text"><%= simple_format(comment.body) %></p>
+        <% if comment.youtube? && comment.identifier.present? %>
+          <div class="ratio ratio-16x9" style="max-width: 560px;">
+            <iframe src='https://www.youtube.com/embed/<%= "#{comment.split_id_from_youtube_url}" %>' allowfullscreen></iframe>
+          </div>
+        <% end %>
         <p class="card-text"><%= comment.created_at.strftime('%Y/%m/%d') %></p>
 
         <% if logged_in? && current_user.own?(comment) %>
@@ -25,15 +30,7 @@
   <% end %>
 
   <% if logged_in? %>
-    <div class="row mb-3">
-      <div class="col-lg-8 offset-lg-2">
-        <%= form_with model: @comment, url: [@sheet, @comment], local: true do |f| %>
-          <%= f.label :body %>
-          <%= f.text_area :body, class: 'form-control mb-3', id: 'js-new-comment-body', row: 4, placeholder: Comment.human_attribute_name(:body) %>
-          <%= f.submit t('defaults.post'), class: 'btn btn-primary' %>
-        <% end %>
-      </div>
-    </div>
+    <%= render 'comments/form', { sheet: @sheet, comment: @comment } %>
   <% end %>
 
   <% if logged_in? && current_user.own?(@sheet) %>
