--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -19,6 +19,7 @@
           <%= f.label :password_confirmation %>
           <%= f.password_field :password_confirmation, class: 'form-control' %>
         </div>
+        <%= render 'shared/error_messages', object: f.object %>
         <%= f.submit (t 'defaults.register'), class: 'btn btn-primary' %>
       <% end %>
       <div class='text-center'>
