--- a/app/views/sheets/_etude.html.erb
+++ b/app/views/sheets/_etude.html.erb
@@ -1,8 +1,8 @@
   <%= form_with model: search_form, url: search_sheets_path, scope: :q, class: 'd-flex', method: :get do |f| %>
     <%= f.search_field :title, id: 'search_field_of_sheet', class: 'form-control me-2', placeholder: 'タイトル' %>
-    <%= f.select :level, Sheet.levels_i18n.invert, { include_blank: 'レベル' }, { class: 'form-control me-2' } %>
+    <%= f.select :level, Sheet.levels_i18n.invert, { include_blank: 'レベル' }, { class: 'form-control me-2', id: 'search_level' } %>
     <%= f.search_field :comment_body, id: 'search_field_of_comment', class: 'form-control me-2', placeholder: 'コメント' %>
-    <%= f.select :comment_embed, Comment.embed_types_i18n.invert, { include_blank: 'コメントの動画' }, class: 'form-control me-2' %>
+    <%= f.select :comment_embed, Comment.embed_types_i18n.invert, { include_blank: 'コメントの動画' }, { class: 'form-control me-2', id: 'search_embed' } %>
     <%= f.search_field :username, id: 'search_field_of_user', class: 'form-control me-2', placeholder: 'ユーザー' %>
     <%= f.submit (t 'defaults.search'), class: 'btn btn-primary' %>
   <% end %>
