Fix: トップページのアプリ説明記載を修正

--- a/app/views/sheets/index.html.erb
+++ b/app/views/sheets/index.html.erb
@@ -26,6 +26,7 @@
     <ul class="fs-6">
       <li>ソルフェジオ周波数を含む音を使用しています（甲音２の音を528Hzに調整）</li>
       <li>テンポを変更できます（♩=20〜200）（再生中は変更できません）</li>
+      <li>iPhoneでは音が鳴らない可能性があります。</li>
     </ul>
   </div>
   <div class="shadow p-3 mb-5 bg-body rounded">
